unpackaged/main/default/objects/VehicleDailySummary__c/VehicleDailySummary__c.object-meta.xml
<CustomObject>
    <label>Vehicle Daily Summary</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Vehicle Daily Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Daily Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>