unpackaged/main/default/objects/VehicleDailySummary__c/fields/AverageStopTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>AverageStopTimeMinutes__c</fullName>
    <label>Average Stop Time Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>