unpackaged/main/default/objects/VehicleDailySummary__c/fields/AverageStopTimeSeconds__c.field-meta.xml
<CustomField>
    <fullName>AverageStopTimeSeconds__c</fullName>
    <label>Average Stop Time Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>