unpackaged/main/default/objects/VehicleDailySummary__c/fields/Disconnect_Alert__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Alert__c</fullName>
    <label>Disconnect Alert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>