unpackaged/main/default/objects/VehicleDailySummary__c/fields/DriveTimeHours__c.field-meta.xml
<CustomField>
    <fullName>DriveTimeHours__c</fullName>
    <label>Drive Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>