unpackaged/main/default/objects/VehicleDailySummary__c/fields/DriveTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>DriveTimeMinutes__c</fullName>
    <label>Drive Time Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>