unpackaged/main/default/objects/VehicleDailySummary__c/fields/FirstPointoftheDay__c.field-meta.xml
<CustomField>
    <fullName>FirstPointoftheDay__c</fullName>
    <label>First Point of the Day</label>
    <type>DateTime</type>
</CustomField>