unpackaged/main/default/objects/VehicleDailySummary__c/fields/Last_Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Odometer_Reading__c</fullName>
    <label>Last Odometer Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>