unpackaged/main/default/objects/VehicleDailySummary__c/fields/LastPointoftheDay__c.field-meta.xml
<CustomField>
    <fullName>LastPointoftheDay__c</fullName>
    <label>Last Point of the Day</label>
    <type>DateTime</type>
</CustomField>