unpackaged/main/default/objects/VehicleDailySummary__c/fields/MaxSpeed__c.field-meta.xml
<CustomField>
    <fullName>MaxSpeed__c</fullName>
    <label>Max Speed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>