unpackaged/main/default/objects/VehicleDailySummary__c/fields/NumberofStops__c.field-meta.xml
<CustomField>
    <fullName>NumberofStops__c</fullName>
    <label>Number of Stops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>