unpackaged/main/default/objects/VehicleDailySummary__c/fields/StopTimeHours__c.field-meta.xml
<CustomField>
    <fullName>StopTimeHours__c</fullName>
    <label>Stop Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>