unpackaged/main/default/objects/VehicleDailySummary__c/fields/StopTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>StopTimeMinutes__c</fullName>
    <label>Stop Time Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>