unpackaged/main/default/objects/VehicleDailySummary__c/fields/Total_Number_of_Max_Speed_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Max_Speed_Events__c</fullName>
    <label>Total Number of Max Speed Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>