unpackaged/main/default/objects/VehicleDailySummary__c/fields/TotalDistance__c.field-meta.xml
<CustomField>
    <fullName>TotalDistance__c</fullName>
    <label>Total Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>