unpackaged/main/default/objects/VehicleDailySummary__c/fields/TotalTimeHours__c.field-meta.xml
<CustomField>
    <fullName>TotalTimeHours__c</fullName>
    <label>Total Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>