unpackaged/main/default/objects/VehicleDailySummary__c/fields/TotalTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>TotalTimeMinutes__c</fullName>
    <label>Total Time Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>