unpackaged/main/default/objects/VehicleDailySummary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>Driver__c</columns>
    <columns>Vehicle__c</columns>
    <columns>NumberofStops__c</columns>
    <columns>TotalDistance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>